--- a/scripts.yaml
+++ b/scripts.yaml
@@ -667,3 +667,77 @@ power_notification_litiere_pleine:
           entity_id: input_number.litter_tracking
   description: ''
   icon: mdi:bell
+power_notification_poubelle_noire_non_sortie_a_temps:
+  alias: Power Notification - Poubelle Noire non sortie a temps
+  use_blueprint:
+    path: jlo/power_notification_creator.yaml
+    input:
+      target: send_to_persons_in_zones
+      zones:
+      - zone.home
+      default_title: "\U0001F5D1️ Poubelle Noire"
+      default_message: Vous devez sortir la poubelle noire!
+  description: ''
+power_notification_poubelle_verte_non_sortie_a_temps:
+  alias: 'Power Notification - Poubelle Verte non sortie a temps '
+  use_blueprint:
+    path: jlo/power_notification_creator.yaml
+    input:
+      target: send_to_persons_in_zones
+      zones:
+      - zone.home
+      default_title: ♻️ Poubelle Noire
+      default_message: Vous devez sortir la poubelle verte!
+  description: ''
+  icon: mdi:bell
+power_notification_poubelle_noire_a_sortir:
+  alias: Power Notification - Poubelle Noire à sortir
+  use_blueprint:
+    path: jlo/power_notification_creator.yaml
+    input:
+      target: send_to_persons_in_zones
+      zones:
+      - zone.home
+      default_title: "\U0001F5D1️ Poubelle Noire"
+      default_message: N'oubliez pas de sortir la poubelle noire
+      button_title: C'est fait!
+      button_action:
+      - action: input_boolean.turn_off
+        metadata: {}
+        data: {}
+        target:
+          entity_id: input_boolean.poubelle_noire_a_sortir
+      discard_when:
+      - trigger: state
+        entity_id:
+        - input_boolean.poubelle_noire_a_sortir
+        to: 'off'
+      button: true
+  description: ''
+  icon: mdi:bell
+power_notification_poubelle_verte_a_sortir:
+  alias: Power Notification - Poubelle Verte à sortir
+  use_blueprint:
+    path: jlo/power_notification_creator.yaml
+    input:
+      target: send_to_persons_in_zones
+      zones:
+      - zone.home
+      default_title: ♻️ Poubelle Verte
+      default_message: N'oubliez pas de sortir la poubelle verte
+      button_title: C'est fait!
+      button_action:
+      - action: input_boolean.turn_off
+        metadata: {}
+        data: {}
+        target:
+          entity_id:
+          - input_boolean.poubelle_verte_a_sortir
+      discard_when:
+      - trigger: state
+        entity_id:
+        - input_boolean.poubelle_verte_a_sortir
+        to: 'off'
+      button: true
+  description: ''
+  icon: mdi:bell
