--- a/automations.yaml
+++ b/automations.yaml
@@ -3668,16 +3668,11 @@
     entity_id: input_select.modes_de_presence_de_la_maison_v2
     state: Occupée
   actions:
-  - event: NOTIFIER
-    event_data:
-      action: send_to_present
-      title: "\U0001FA9F Porte d'entrée"
-      message: La porte d'entrée est restée ouverte!
-      tag: front_door_open
-      interuption_level: critical
-      until:
-      - entity_id: binary_sensor.capteur_ouverture_porte_entree
-        new_state: 'off'
+  - action: script.turn_on
+    metadata: {}
+    data: {}
+    target:
+      entity_id: script.power_notification_porte_d_entree_restee_ouverte
   - action: assist_satellite.announce
     metadata: {}
     data:
