--- a/automations.yaml
+++ b/automations.yaml
@@ -4127,19 +4127,11 @@
         entity_id: input_select.modes_de_presence_de_la_maison_v2
         state: Occupée
       sequence:
-      - event: NOTIFIER
-        event_data:
-          action: send_to_present
-          title: "\U0001F4EC  Boite aux lettres"
-          message: Vous avez du courrier !
-          tag: you_got_mail
-          callback:
-          - title: Courrier relevé
-            event: mail_picked_up
-            icon: sfsymbols:checkmark.circle.fill
-          until:
-          - entity_id: input_boolean.courrier_a_relever
-            new_state: 'off'
+      - action: script.turn_on
+        metadata: {}
+        data: {}
+        target:
+          entity_id: script.power_notification_courrier_a_relever
     - conditions:
       - condition: trigger
         id:
@@ -4148,19 +4140,11 @@
         entity_id: input_boolean.courrier_a_relever
         state: 'on'
       sequence:
-      - event: NOTIFIER
-        event_data:
-          action: send_to_present
-          title: "\U0001F4EC  Boite aux lettres"
-          message: Vous avez du courrier !
-          tag: you_got_mail
-          callback:
-          - title: Courrier relevé
-            event: mail_picked_up
-            icon: sfsymbols:checkmark.circle.fill
-          until:
-          - entity_id: input_boolean.courrier_a_relever
-            new_state: 'off'
+      - action: script.turn_on
+        metadata: {}
+        data: {}
+        target:
+          entity_id: script.power_notification_courrier_a_relever
   mode: single
 - id: '1728147111105'
   alias: "Machine a Laver Intelligente - \U0001F514 Notifier"
@@ -4212,21 +4196,4 @@
     data: {}
     target:
       entity_id: input_boolean.machine_a_laver_a_vider
-  mode: single
-- id: '1728147483975'
-  alias: "Boîte aux Lettres Intelligente - \U0001F4F2 Courrier relever depuis notification"
-  description: ''
-  triggers:
-  - event_type: mobile_app_notification_action
-    event_data:
-      action: mail_picked_up
-    trigger: event
-  conditions: []
-  actions:
-  - action: input_boolean.turn_off
-    metadata: {}
-    data: {}
-    target:
-      entity_id:
-      - input_boolean.courrier_a_relever
   mode: single
