--- a/automations.yaml
+++ b/automations.yaml
@@ -4167,33 +4167,9 @@
     entity_id: input_select.modes_de_presence_de_la_maison_v2
     state: Occupée
   actions:
-  - event: NOTIFIER
-    event_data:
-      action: send_to_present
-      title: "\U0001FAE7 Machine à laver"
-      message: Cycle de lavage terminé !
-      tag: washing_mashine_over
-      callback:
-      - title: Machine à laver vidée
-        event: washing_machine_empty
-        icon: sfsymbols:checkmark.circle.fill
-      until:
-      - entity_id: input_boolean.machine_a_laver_a_vider
-        new_state: 'off'
-  mode: single
-- id: '1728147370381'
-  alias: "Machine a Laver Intelligente - \U0001F4F2 Fait depuis notification"
-  description: ''
-  triggers:
-  - event_type: mobile_app_notification_action
-    event_data:
-      action: washing_machine_empty
-    trigger: event
-  conditions: []
-  actions:
-  - action: input_boolean.turn_off
+  - action: script.turn_on
     metadata: {}
     data: {}
     target:
-      entity_id: input_boolean.machine_a_laver_a_vider
+      entity_id: script.power_notification_machine_a_laver_terminee
   mode: single
